classList.js improved

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/ico">
     <title>Document</title>
 </head>
 <body>
-    
+    <div id="first" class="btn-block">
+        <button class="blue"></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+        <button></button>
+    </div>
+
+    <script src="js/classList.js"></script>
 </body>
 </html>
