--- a/index.html
+++ b/index.html
@@ -19,6 +19,6 @@
         <button></button>
     </div>
 
-    <script src="js/classList.js"></script>
+    <script src="js/40_dates.js"></script>
 </body>
 </html>
