countdown.js added

--- a/Food/index.html
+++ b/Food/index.html
@@ -302,6 +302,6 @@
         </div>
     </div>
 
-    <script src="js/38_project_tabs.js"></script>
+    <script src="js/41_countdown.js"></script>
 </body>
 </html>
